sfx2/source/control/thumbnailviewacc.hxx
@@ -187,9 +187,15 @@ public:
     ThumbnailViewItemAcc( ThumbnailViewItem* pParent, bool bIsTransientChildrenDisabled );
     ~ThumbnailViewItemAcc();
 
+    void FireAccessibleEvent( short nEventId,
+                              const ::com::sun::star::uno::Any& rOldValue,
+                              const ::com::sun::star::uno::Any& rNewValue );
+
     void    ParentDestroyed();
 
     sal_Bool    HasAccessibleListeners() const { return( mxEventListeners.size() > 0 ); }
+
+    static ThumbnailViewItemAcc* getImplementation( const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface >& rxData ) throw();
 
 public:
 
